<resources>
    <string name="app_name">Flowery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_scan">Camera Scan</string>
    <string name="title_activity_on_boarding">Flowery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_started">Mulai</string>
    <string name="onboarding1_text">Cari info bungamu melalui kamera!</string>
    <string name="onboarding2_text">Dapatkan tips cara merawat bunga!</string>
    <string name="onboarding3_text">Atur jadwal perawatan bunga!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="result_kamera">Result Kamera</string>
    <string name="login_title">Join Flowery</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Name</string>
    <string name="register_name_hint">Enter Your Name Here!</string>
    <string name="email_hint">Enter Your Email Here!</string>
    <string name="pass_hint">Enter Your Password Here!</string>
    <string name="register_title">Don\'t Have an Account ? Come Join Us!</string>
    <string name="did_you_know">Tahukah Kamu ?</string>
    <string name="do_not_be_empty">Jangan kosong</string>
    <string name="home_search">Search</string>
    <string name="today_trivia">Trivia Hari Ini</string>
    <string name="today_flower">Flower of The Day</string>
    <string name="not_found">Hasil tidak ditemukan</string>
    <string name="out">Keluar</string>
    <string name="profileimage">profileImage</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_profile">Profile</string>
    <string name="mistake_found">Terjadi kesalahan</string>
    <string name="password_here">Password wajib diisi</string>
    <string name="email_here">Email wajib diisi</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="to_function">To Function</string>
    <string name="in_care">Dalam Perawatan</string>
    <string name="care_for">Rawat Bunga</string>
</resources>