<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="397dp"
        android:layout_height="317dp"
        android:layout_gravity="center"
        android:layout_marginTop="88dp"
        android:background="@drawable/logreg_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/register_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/nameBox"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView2" />


    <TextView
        android:id="@+id/textEmailBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailBox"
        app:layout_constraintStart_toStartOf="@+id/emailBox"
        app:layout_constraintTop_toBottomOf="@+id/nameBox" />

    <TextView
        android:id="@+id/textPassBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passBox"
        app:layout_constraintStart_toStartOf="@+id/passBox"
        app:layout_constraintTop_toBottomOf="@+id/emailBox" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameBox"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="368dp"
        android:layout_height="49dp"
        android:layout_marginTop="136dp"
        android:hint="@string/register_name_hint"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailBox"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="368dp"
        android:layout_height="49dp"
        android:layout_marginTop="228dp"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passBox"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="368dp"
        android:layout_height="49dp"
        android:layout_marginTop="324dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_anchor="@+id/nameBox"
        app:layout_anchorGravity="top|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"
        android:hint="@string/pass_hint"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/register"
        android:textAllCaps="false"
        app:backgroundTint="@color/primary_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButtonInRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        app:backgroundTint="@color/primary_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>